@@ -17,14 +17,9 @@ import com.google.common.util.concurrent.ListenableFuture;
 import com.google.inject.Inject;
 import io.trino.Session;
 import io.trino.execution.warnings.WarningCollector;
-import io.trino.metadata.SessionPropertyManager;
 import io.trino.security.AccessControl;
 import io.trino.security.SecurityContext;
 import io.trino.spi.TrinoException;
-import io.trino.spi.connector.CatalogHandle;
-import io.trino.spi.session.PropertyMetadata;
-import io.trino.spi.type.Type;
-import io.trino.sql.PlannerContext;
 import io.trino.sql.tree.Expression;
 import io.trino.sql.tree.QualifiedName;
 import io.trino.sql.tree.SetSession;
@@ -33,27 +28,20 @@ import java.util.List;
 
 import static com.google.common.util.concurrent.Futures.immediateVoidFuture;
 import static io.trino.execution.ParameterExtractor.bindParameters;
-import static io.trino.metadata.MetadataUtil.getRequiredCatalogHandle;
-import static io.trino.metadata.SessionPropertyManager.evaluatePropertyValue;
-import static io.trino.metadata.SessionPropertyManager.serializeSessionProperty;
 import static io.trino.spi.StandardErrorCode.INVALID_SESSION_PROPERTY;
-import static io.trino.sql.analyzer.SemanticExceptions.semanticException;
-import static java.lang.String.format;
 import static java.util.Objects.requireNonNull;
 
 public class SetSessionTask
         implements DataDefinitionTask<SetSession>
 {
-    private final PlannerContext plannerContext;
+    private final SessionPropertyEvaluator sessionEvaluator;
     private final AccessControl accessControl;
-    private final SessionPropertyManager sessionPropertyManager;
 
     @Inject
-    public SetSessionTask(PlannerContext plannerContext, AccessControl accessControl, SessionPropertyManager sessionPropertyManager)
+    public SetSessionTask(SessionPropertyEvaluator sessionPropertyEvaluator, AccessControl accessControl)
     {
-        this.plannerContext = requireNonNull(plannerContext, "plannerContext is null");
+        this.sessionEvaluator = requireNonNull(sessionPropertyEvaluator, "sessionEvaluator is null");
         this.accessControl = requireNonNull(accessControl, "accessControl is null");
-        this.sessionPropertyManager = requireNonNull(sessionPropertyManager, "sessionPropertyManager is null");
     }
 
     @Override
@@ -69,50 +57,23 @@ public class SetSessionTask
             List<Expression> parameters,
             WarningCollector warningCollector)
     {
-        Session session = stateMachine.getSession();
         QualifiedName propertyName = statement.getName();
         List<String> parts = propertyName.getParts();
-        if (parts.size() > 2) {
-            throw semanticException(INVALID_SESSION_PROPERTY, statement, "Invalid session property '%s'", propertyName);
-        }
+        Session session = stateMachine.getSession();
 
-        // validate the property name
-        PropertyMetadata<?> propertyMetadata;
         if (parts.size() == 1) {
-            accessControl.checkCanSetSystemSessionProperty(session.getIdentity(), session.getQueryId(), parts.get(0));
-            propertyMetadata = sessionPropertyManager.getSystemSessionPropertyMetadata(parts.get(0))
-                    .orElseThrow(() -> semanticException(INVALID_SESSION_PROPERTY, statement, "Session property '%s' does not exist", statement.getName()));
+            accessControl.checkCanSetSystemSessionProperty(session.getIdentity(), session.getQueryId(), parts.getFirst());
+        }
+        else if (parts.size() == 2) {
+            accessControl.checkCanSetCatalogSessionProperty(SecurityContext.of(session), parts.getFirst(), parts.getLast());
         }
         else {
-            CatalogHandle catalogHandle = getRequiredCatalogHandle(plannerContext.getMetadata(), stateMachine.getSession(), statement, parts.get(0));
-            accessControl.checkCanSetCatalogSessionProperty(SecurityContext.of(session), parts.get(0), parts.get(1));
-            propertyMetadata = sessionPropertyManager.getConnectorSessionPropertyMetadata(catalogHandle, parts.get(1))
-                    .orElseThrow(() -> semanticException(INVALID_SESSION_PROPERTY, statement, "Session property '%s' does not exist", statement.getName()));
+            throw new TrinoException(INVALID_SESSION_PROPERTY, "Invalid session property '%s'".formatted(propertyName));
         }
 
-        Type type = propertyMetadata.getSqlType();
-        Object objectValue;
-
-        try {
-            objectValue = evaluatePropertyValue(statement.getValue(), type, session, plannerContext, accessControl, bindParameters(statement, parameters));
-        }
-        catch (TrinoException e) {
-            throw new TrinoException(
-                    INVALID_SESSION_PROPERTY,
-                    format("Unable to set session property '%s' to '%s': %s", propertyName, statement.getValue(), e.getRawMessage()));
-        }
-
-        String value = serializeSessionProperty(type, objectValue);
-
-        // verify the SQL value can be decoded by the property
-        try {
-            propertyMetadata.decode(objectValue);
-        }
-        catch (RuntimeException e) {
-            throw semanticException(INVALID_SESSION_PROPERTY, statement, "%s", e.getMessage());
-        }
-
-        stateMachine.addSetSessionProperties(propertyName.toString(), value);
+        stateMachine.addSetSessionProperties(
+                statement.getName().toString(),
+                sessionEvaluator.evaluate(stateMachine.getSession(), statement.getName(), statement.getValue(), bindParameters(statement, parameters)));
 
         return immediateVoidFuture();
     }
